# HR-Management-system

./: .gitignore  INSTALL.md  LICENSE  README.md  RUNNING.md  SECURITY.md  pyproject.toml
deploy/: DEPLOY-ORACLE.md
deploy/local/: Dockerfile.racedog  README.md  apps.base.json  racedog.yml  theme-fix.sh
deploy/oracle/: backup.sh  deploy-oracle.sh
racedog_hr/: api.py  boot.py  demo.py  employee_hooks.py  hooks.py  modules.txt  patches.txt  permissions.py  setup.py  tasks.py
racedog_hr/fixtures/: custom_field.json  notification.json  number_card.json  role.json  workspace.json
racedog_hr/patches/v0_0_1/: add_indexes.py  setup_roles_and_permissions.py
racedog_hr/public/css/: bamboo_theme.bundle.css
racedog_hr/public/js/: consultant_timesheet.js  employee.js  employee_list.js
racedog_hr/racedog_hr/doctype/client/: client.json  client.py
racedog_hr/racedog_hr/doctype/client_requirement/: client_requirement.json  client_requirement.py
racedog_hr/racedog_hr/doctype/consultant_billing/: consultant_billing.json  consultant_billing.py
racedog_hr/racedog_hr/doctype/consultant_document/: consultant_document.json  consultant_document.py
racedog_hr/racedog_hr/doctype/consultant_timesheet/: consultant_timesheet.json  consultant_timesheet.py
racedog_hr/racedog_hr/doctype/racedog_skill_item/: racedog_skill_item.json  racedog_skill_item.py
racedog_hr/racedog_hr/doctype/racedog_work_auth_item/: racedog_work_auth_item.json  racedog_work_auth_item.py
racedog_hr/racedog_hr/doctype/skill/: skill.json  skill.py
racedog_hr/tests/: test_firewall_allowlists.py
(+24 files in other folders)
